Fix selection box overlap and white space under menu bugs

--- a/src/css/base/_global.scss
+++ b/src/css/base/_global.scss
@@ -13,6 +13,7 @@ body {
     --highlight: #f6ad7b;
     font-family: 'Rubik', sans-serif;
     font-size: 1em;
+    margin: 0;
 }
 
 h1 {
@@ -20,6 +21,8 @@ h1 {
     text-shadow: 1px 1px 2px $dark-accent;
     font-size: 2.1em;
     margin: 10px 0px;
+    position: absolute;
+    top: 0;
 }
 
 h2 {
@@ -35,12 +38,7 @@ button {
 }
 
 .app {
-    position: fixed;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    margin: auto;
     display: flex;
     overflow-y: auto;
+    height: 100vh;
 }
