--- a/src/css/menu/_albumSelect.scss
+++ b/src/css/menu/_albumSelect.scss
@@ -5,6 +5,7 @@
     z-index: 1;
     display: flex;
     flex-direction: column;
+    justify-content: flex-end;
     padding: 0px 25px;
     background-color: $base-color;
     box-shadow: 0.5px 0px 5px $dark-accent;
@@ -23,8 +24,6 @@
 }
 
 .album-options {
-    height: 65%;
-    margin-bottom: 10px;
     form {
         margin-bottom: 8px;
     }
