--- a/src/css/menu/_selectionBox.scss
+++ b/src/css/menu/_selectionBox.scss
@@ -12,7 +12,7 @@
 
 .selection-box {
     border: 3px dashed $light-accent;
-    height: 80px;
+    height: 120px;
     padding: 7.5px 7.5px;
     box-sizing: border-box;
     display: flex;
